--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,13 @@
 <div class="rounded">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6 col-lg-3 col-sm-4 col-xl-2">
-        
+            <div class="col-6 col-lg-3 col-sm-4 col-xl-2" *ngFor="let movie of movies">
+                <!-- <div class="card mb-4">
+                    <img src="{{movieCard.posterUrl}}" />
+                </div> -->
+                <app-movie-card [movieCard]="movie">
+                    
+                </app-movie-card>
             </div>
         </div>
     </div>
