--- a/src/app/shared/components/movie-card/movie-card.component.html
+++ b/src/app/shared/components/movie-card/movie-card.component.html
@@ -1,1 +1,3 @@
-<p>movie-card works!</p>
+<div class="card mb-4">
+    <img src="{{movieCard.posterUrl}}" alt="{{movieCard.title}}" class="img-fluid rounded"      />
+</div>
