--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+
+<div class="row justify-content-center">
+
+    <div class="col-md-4">
+        <h4>Login</h4>
+        <hr>
+        <form (ngSubmit)="submit()">
+            <div class="mb-3">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" name="email" [(ngModel)]="loginModel.email">
+                
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password" [(ngModel)]="loginModel.password">
+            </div>
+            
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>        
+
+    </div>
+
+</div>
