--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
+
+<div>
+    <app-header>
+
+    </app-header>
+    <div class="container-fluid mt-1">
+        <router-outlet></router-outlet>
+        
+    </div>
+</div>
 <router-outlet></router-outlet>
 <!-- <app-home></app-home>  -->
