--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -15,9 +15,13 @@
 
                     </li>
                 </ul>
-                <div class="text-end">
+                <div class="text-end" *ngIf="!isUserLoggedIn" >
                     <a class="btn btn-outline-primary me-2" [routerLink]="[ '/account/login']">Login</a>
                     <a class="btn btn-outline-primary me-2" [routerLink]="[ '/account/register']">Register</a>
+                </div>
+                <div *ngIf="isUserLoggedIn" >
+                    {{currentUser.family_name + ' ' + currentUser.given_name}}
+                    <a class="btn btn-outline-primary me-2" (click)="logout()">Logout</a>
                 </div>
             </div>
         </div>
